--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -16,6 +16,8 @@
   padding-top: 0;
   margin-top: 0;
   width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 .hero-overlay {
@@ -40,6 +42,8 @@
   animation-delay: 0.3s;
   padding: 0 $spacing-md;
   margin-top: 80px; // For the fixed navbar
+  width: 100%;
+  box-sizing: border-box;
   
   h1 {
     font-size: $font-size-xxl;
@@ -55,7 +59,7 @@
     font-size: $font-size-lg;
     margin-bottom: $spacing-lg;
     text-shadow: 0 1px 3px rgba($black, 0.3);
-    max-width: 600px;
+    max-width: 100%;
     line-height: 1.5;
   }
 }
@@ -64,6 +68,7 @@
   display: flex;
   flex-direction: column;
   gap: $spacing-md;
+  width: 100%;
   
   @include respond-to(md) {
     flex-direction: row;
