--- a/src/app/shared/styles/_base.scss
+++ b/src/app/shared/styles/_base.scss
@@ -12,6 +12,8 @@ html {
   font-size: 16px;
   scroll-behavior: smooth;
   scroll-padding-top: 80px; // For fixed navbar
+  width: 100%;
+  overflow-x: hidden;
 }
 
 body {
@@ -21,6 +23,9 @@ body {
   color: $black;
   background-color: $white;
   overflow-x: hidden;
+  width: 100%;
+  max-width: 100vw;
+  position: relative;
 }
 
 h1, h2, h3, h4, h5, h6 {
