Add translation support with language switcher, translation directive, and pipe; update header and hero components for localization

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -169,3 +169,12 @@
     transform: translateY(0);
   }
 }
+
+.language-switcher {
+  margin-left: $spacing-md;
+  display: none;
+  
+  @include respond-to(lg) {
+    display: block;
+  }
+}
