Update header component styles to improve responsiveness; adjust display properties for navigation based on screen size

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -53,11 +53,11 @@
 }
 
 .nav {
+  display: none;
+  
   @include respond-to(lg) {
     display: block;
   }
-  
-  display: none;
   
   &.nav-active {
     display: block;
@@ -73,6 +73,15 @@
     overflow-y: auto;
     overflow-x: hidden;
     box-sizing: border-box;
+    
+    @include respond-to(lg) {
+      position: static;
+      height: auto;
+      padding: 0;
+      width: auto;
+      animation: none;
+      overflow: visible;
+    }
   }
 }
 
