--- a/src/app/shared/styles/_base.scss
+++ b/src/app/shared/styles/_base.scss
@@ -14,6 +14,14 @@ html {
   scroll-padding-top: 80px; // For fixed navbar
   width: 100%;
   overflow-x: hidden;
+  
+  &[dir="rtl"] {
+    font-family: 'Tajawal', v.$font-family-primary;
+    
+    h1, h2, h3, h4, h5, h6 {
+      font-family: 'Tajawal', v.$font-family-secondary;
+    }
+  }
 }
 
 body {
@@ -68,6 +76,10 @@ img {
 button {
   cursor: pointer;
   font-family: v.$font-family-primary;
+  
+  html[dir="rtl"] & {
+    font-family: 'Tajawal', v.$font-family-primary;
+  }
 }
 
 ul, ol {
