--- a/src/app/components/service-item/service-item.component.html
+++ b/src/app/components/service-item/service-item.component.html
@@ -1,6 +1,6 @@
 <div class="service-item" [ngClass]="{'reverse': !service.isImageOnLeft}">
   <div class="service-image slide-up">
-    <img [src]="service.imageUrl" [alt]="service.altText" class="img-rounded img-cover">
+    <img [ngSrc]="service.imageUrl" [alt]="service.altText" class="img-rounded img-cover" priority fill>
   </div>
   <div class="service-content slide-up">
     <h3 [appTranslate]="service.titleTranslateKey || ''">{{ service.title }}</h3>
