--- a/src/app/components/service-item/service-item.component.scss
+++ b/src/app/components/service-item/service-item.component.scss
@@ -5,7 +5,7 @@
   display: grid;
   grid-template-columns: 1fr;
   gap: 0;
-  margin-bottom: $spacing-xxl;
+  margin-bottom: 0;
   background-color: $white;
   border-radius: $border-radius-lg;
   overflow: hidden;
@@ -28,17 +28,19 @@
 }
 
 .service-image {
-  height: 100%;
-  min-height: 350px;
+  position: relative;
+  height: 300px;
   overflow: hidden;
+  
+  @include respond-to(md) {
+    height: 100%;
+  }
   
   img {
     width: 100%;
     height: 100%;
-    min-height: 350px;
-    box-shadow: none;
-    transition: $transition-slow;
     object-fit: cover;
+    transition: $transition-slow;
     display: block;
     
     &:hover {
@@ -74,7 +76,7 @@
   
   p {
     color: $dark-gray;
-    margin-bottom: $spacing-md;
+    margin-bottom: 0;
     line-height: 1.8;
     font-size: $font-size-base;
   }
