--- a/src/app/components/services/services.component.scss
+++ b/src/app/components/services/services.component.scss
@@ -20,18 +20,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba($white, 0.9);
-    z-index: 0;
-  }
-  
-  &::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to bottom, rgba($white, 0.85) 0%, rgba($light-gray, 0.9) 100%);
+    background-color: rgba($white, 0.95);
     z-index: 0;
   }
 }
@@ -73,11 +62,14 @@
 .services-list {
   position: relative;
   z-index: 1;
-  margin: $spacing-xl auto $spacing-xxl;
+  margin: $spacing-xl auto;
   max-width: 1200px;
+  display: flex;
+  flex-direction: column;
+  gap: $spacing-xl;
   
   @include respond-to(md) {
-    margin: $spacing-xxl auto $spacing-xxl;
+    margin: $spacing-xxl auto;
   }
 }
 
@@ -87,9 +79,10 @@
   border-radius: $border-radius-lg;
   box-shadow: $shadow-lg;
   max-width: 800px;
-  margin: 0 auto;
+  margin: $spacing-xl auto 0;
   position: relative;
   z-index: 1;
+  text-align: center;
   
   h3 {
     color: $deep-blue;
