--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,7 +12,7 @@ main {
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin-top: 0;
+  margin: 0;
   padding: 0;
   position: relative;
   overflow-x: hidden;
@@ -28,8 +28,7 @@ main {
 
 #home {
   height: 100vh;
-  min-height: 600px;
-  max-height: 800px;
+  min-height: 100vh;
   position: relative;
   z-index: 1;
 }
