--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -3,8 +3,7 @@
 
 .hero {
   height: 100vh;
-  min-height: 600px;
-  max-height: 800px;
+  min-height: 100vh;
   background-image: url('/assets/images/ajdin/cover.jpg');
   background-size: cover;
   background-position: center;
@@ -13,11 +12,11 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  padding-top: 0;
-  margin-top: 0;
+  padding: 0;
+  margin: 0;
   width: 100%;
   max-width: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .hero-overlay {
@@ -41,7 +40,8 @@
   max-width: 700px;
   animation-delay: 0.3s;
   padding: 0 $spacing-md;
-  margin-top: 80px; // For the fixed navbar
+  margin-top: 0;
+  padding-top: $spacing-xxl;
   width: 100%;
   box-sizing: border-box;
   
