--- a/src/app/components/service-item/service-item.component.scss
+++ b/src/app/components/service-item/service-item.component.scss
@@ -5,11 +5,13 @@
   display: grid;
   grid-template-columns: 1fr;
   gap: 0;
-  margin-bottom: 0;
+  margin: 0;
   background-color: $white;
   border-radius: $border-radius-lg;
   overflow: hidden;
   box-shadow: $shadow;
+  min-height: 100vh;
+  height: 100vh;
   
   @include respond-to(md) {
     grid-template-columns: 1fr 1fr;
@@ -29,11 +31,11 @@
 
 .service-image {
   position: relative;
-  height: 300px;
+  height: 50vh;
   overflow: hidden;
   
   @include respond-to(md) {
-    height: 100%;
+    height: 100vh;
   }
   
   img {
@@ -55,6 +57,12 @@
   justify-content: center;
   padding: $spacing-xl;
   background-color: $white;
+  height: 50vh;
+  
+  @include respond-to(md) {
+    height: 100vh;
+    padding: $spacing-xxl;
+  }
   
   h3 {
     color: $primary-blue;
@@ -79,6 +87,7 @@
     margin-bottom: 0;
     line-height: 1.8;
     font-size: $font-size-base;
+    max-width: 600px;
   }
 }
 
