--- a/src/app/components/hero/hero.component.scss
+++ b/src/app/components/hero/hero.component.scss
@@ -4,10 +4,6 @@
 .hero {
   height: 100vh;
   min-height: 100vh;
-  background-image: url('/assets/images/ajdin/cover.jpg');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
   position: relative;
   display: flex;
   align-items: center;
@@ -17,6 +13,31 @@
   width: 100%;
   max-width: 100%;
   overflow: hidden;
+}
+
+.hero-slides {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.hero-slide {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+  
+  &.active {
+    opacity: 1;
+  }
 }
 
 .hero-overlay {
