--- a/src/app/shared/styles/_variables.scss
+++ b/src/app/shared/styles/_variables.scss
@@ -4,6 +4,7 @@ $secondary-blue: #438bb6;
 $accent-teal: #4aafab;
 $light-blue: #d9edf7;
 $deep-blue: #1d3557;
+$white: #ffffff;
 
 $soft-green: #7eb77f;
 $deep-green: #2c6e49;
