--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -16,7 +16,7 @@
         Premium apartments with stunning views and world-class amenities
       </p>
       <div class="hero-buttons fade-in">
-        <a href="https://www.booking.com" target="_blank" class="btn" appTranslate="book_now">Book Now</a>
+        <a href="https://www.booking.com/Share-IUhAIK" target="_blank" class="btn" appTranslate="book_now">Book Now</a>
         <a href="#about" class="btn-secondary" appTranslate="about">About</a>
       </div>
     </div>
