--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -40,8 +40,7 @@
           <div class="social-links">
             <a href="https://www.facebook.com/splavnadan24" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
             <a href="https://www.instagram.com/splavnadan.24/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-            <a href="#" aria-label="Pinterest"><i class="fab fa-pinterest-p"></i></a>
+            <a href="https://maps.app.goo.gl/bzBX6GMvFcwnC93m7" target="_blank" aria-label="Find us on Google Maps"><i class="fas fa-map-marker-alt"></i></a>
           </div>
         </div>
       </div>
