--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -41,10 +41,16 @@
         
         <div class="contact-map">
           <h3 appTranslate="find_us">Find Us</h3>
-          <div class="map-placeholder">
-            <!-- In a real application, you would embed a Google Map here -->
-            <p appTranslate="map_placeholder">Map Embed Goes Here</p>
-            <p><small appTranslate="map_notice">Google Maps or other map service would be embedded in the final version</small></p>
+          <div class="map-container">
+            <iframe 
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2885.0976211212123!2d17.819473476653936!3d43.687733850195784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x475f5b67b1edfa5d%3A0xa60489474d6e8c7a!2sLakeside%20luxury%20apartments%2BRent%20A%20Boats%20Ajdin!5e0!3m2!1sbs!2sba!4v1744027678895!5m2!1sbs!2sba" 
+              width="100%" 
+              height="450" 
+              style="border:0;" 
+              allowfullscreen="" 
+              loading="lazy" 
+              referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
           </div>
         </div>
       </div>
