--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,6 +19,9 @@
   <section id="services">
     <app-services></app-services>
   </section>
+  <section id="reviews">
+    <app-reviews></app-reviews>
+  </section>
   <section id="contact">
     <app-contact></app-contact>
   </section>
