Refactor reviews component to simplify country display and remove unused translation key
- Updated reviews.component.html to directly display the country without the "Guest from" label.
- Removed the unused translation key for "guest_from" from translations.ts to streamline localization.

--- a/src/app/components/reviews/reviews.component.html
+++ b/src/app/components/reviews/reviews.component.html
@@ -19,7 +19,7 @@
                 <div class="country-flag">{{ review.countryFlag }}</div>
                 <div class="author-details">
                   <h4>{{ review.guestName }}</h4>
-                  <p><span appTranslate="guest_from">Guest from</span> {{ review.country }}</p>
+                  <p>{{ review.country }}</p>
                 </div>
               </div>
             </div>
