--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -13,7 +13,7 @@
   z-index: $z-index-fixed;
   transition: $transition-base;
   max-width: 100vw;
-  overflow-x: hidden;
+  overflow: visible;
 
   &.scrolled {
     padding: $spacing-sm 0;
@@ -32,6 +32,8 @@
 .header-content {
   @include flex-between;
   width: 100%;
+  height: 100%;
+  align-items: center;
 }
 
 .logo {
@@ -95,6 +97,8 @@
   @include respond-to(lg) {
     flex-direction: row;
     gap: $spacing-lg;
+    height: 100%;
+    align-items: center;
   }
   
   li {
@@ -102,6 +106,9 @@
     
     @include respond-to(lg) {
       margin-bottom: 0;
+      height: 100%;
+      display: flex;
+      align-items: center;
     }
     
     a {
@@ -136,15 +143,29 @@
   .nav-cta {
     @include respond-to(lg) {
       margin-left: $spacing-lg;
+      height: 100%;
+      display: flex;
+      align-items: center;
     }
     
     a.btn-sm {
       @include button-primary;
       padding: $spacing-xs $spacing-md;
       font-size: $font-size-sm;
+      position: relative;
+      transition: all 0.3s ease;
+      transform-origin: center;
       
       &::after {
         display: none;
+      }
+      
+      &:hover, &:focus {
+        transform: scale(1.05);
+      }
+      
+      &:active {
+        transform: scale(1);
       }
     }
   }
@@ -192,9 +213,12 @@ body.no-scroll {
 .language-switcher {
   margin-left: $spacing-md;
   display: none;
+  height: 100%;
+  display: flex;
+  align-items: center;
   
   @include respond-to(lg) {
-    display: block;
+    display: flex;
   }
 }
 
